--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-prettier": "^3.1.0",
+    "prettier": "^1.14.3",
+    "prettier-eslint": "^8.8.2"
   }
 }
